@@ -22,6 +22,7 @@
 /TAGS
 /dummy-message.wav
 /libbaratinoo.so
+/libspeechd_module.la
 /libvoxin.so
 /sd_baratinoo
 /sd_cicero
